--- a/P1/SERVER/dockerfile
+++ b/P1/SERVER/dockerfile
@@ -1,7 +1,6 @@
 FROM debian:latest
 WORKDIR /app
 COPY . .
-RUN apt-apt install python3
+RUN apt update && apt install python3 -y
 
-
-#CMD ["python3","main.py"]
+#CMD ["ls -la"]
