--- a/P1/CLIENT/dockerfile
+++ b/P1/CLIENT/dockerfile
@@ -1,7 +1,7 @@
 FROM debian:latest
 WORKDIR /app
 COPY . .
-RUN apt-apt install python3
+RUN apt-apt install python3 pip
 
 
 #CMD ["python3","Client.py"]
