--- a/P1/SERVER/dockerfile
+++ b/P1/SERVER/dockerfile
@@ -1,6 +1,6 @@
 FROM debian:latest
 WORKDIR /app
 COPY . .
-RUN apt update && apt install python3 -y
-
-#CMD ["ls -la"]
+RUN apt update && apt install python3 pip -y
+#RUN chmod u+x *.py
+#CMD ["python3","main.py"]
