--- a/P1/SERVER/dockerfile
+++ b/P1/SERVER/dockerfile
@@ -2,5 +2,6 @@ FROM debian:latest
 WORKDIR /app
 COPY . .
 RUN apt update && apt install python3 pip -y
-#RUN chmod u+x *.py
-#CMD ["python3","main.py"]
+RUN pip install psutil
+EXPOSE 6000
+CMD ["python3","main.py"]
