--- a/P1/SERVER/dockerfile
+++ b/P1/SERVER/dockerfile
@@ -1,7 +1,14 @@
 FROM debian:latest
 WORKDIR /app
 COPY . .
-RUN apt update && apt install python3 pip -y
-RUN pip install psutil
+
+RUN apt update \
+    && apt upgrade \
+    && apt install \
+        python3 \
+        pip \
+        -y \
+    && pip install psutil
+
 EXPOSE 6000
 CMD ["python3","main.py"]
